--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "typescript.enablePromptUseWorkspaceTsdk": true,
     "editor.fontSize": 16,
-    "terminal.integrated.fontSize": 14
+    "terminal.integrated.fontSize": 14,
+    "cSpell.words": ["Dreamscape"]
 }
